# dunm

./: AGENTS.md  BUKU_HITAM_RRM_RUST_UPDATED.md  Buku Hitam_ Tensor-Driven Execution Rules.md  Cargo.toml  FRACTAL_ARCHITECTURE.md  GENERATIVE_MICRO_RELATION.md  MICRO_RELATION_ENGINE.md  WIKI_RRM_GENERATIVE.md  _ BUKU HITAM ARSITEKTUR RRM - MARKDOWN EDITION.md  _ BUKU HITAM RRM - AUTOPOIETIC TOKENIZATION.md  _ KONSEP_ Immortal State Loop.md  grammar_anomaly.json  grammar_task2.json  output_hybrid_oracle.txt  replit.nix
.github/workflows/: jules.yml  rust-ci.yml
.jules/: bolt.md  engineering_journal.md
knowledge/grammar/: anomaly_extractor.md  mirror_x.md  rotate_90.md  shift_down.md  shift_right.md  spawn_fractal.md  tensor_macro.md
knowledge/skills/: experimental_translate.md
src/: lib.rs  main.rs  quantum_topology.rs
src/core/: config.rs  core_seeds.rs  cow_memory.rs  deterministic_femto.rs  entity_manifold.rs  fhrr.rs  infinite_detail.rs  jejak perubahan core.md  mod.rs
src/memory/: allocator.rs  knowledge_base.rs  logic_seed_bank.rs  maintenance_engine.rs  maintenance_test.rs  mental_replay.rs  mod.rs
src/perception/: anomalous_extractor.rs  entity_segmenter.rs  hierarchical_gestalt.rs  hologram_decoder.rs  jejak perubahan perception.md  mod.rs  relational_hierarchy.rs  structural_analyzer.rs  universal_manifold.rs
src/reasoning/: axiom_generator.rs  causal_reasoning.rs  counterfactual_engine.rs  entanglement_graph.rs  entanglement_optimizer.rs  global_blackboard.rs  grover_diffusion_system.rs  mod.rs  (+15 more)
tests/: perf_topology.rs  security_io.rs
(+7 files in other folders)
